tests/invalid/duplicate_lifecycle.prsm
// E014: Duplicate lifecycle block inside one component
component DuplicateLifecycle : MonoBehaviour {
    update {
        tick()
    }

    update {
        tick()
    }
}
